1997-12-27  Thomas E. Dickey  <dickey@clark.net>

	* ansi.c, charset.c, control.c, crum.c, edit.c, fun.c, init.c, menu.c, modes.c, output.c, scan.c, sync.c, sysdep.c, tack.c:
	integration with ncurses: restructured includes, fix gcc warnings

	* pad.c:
	integration with ncurses: restructures includes, fix gcc warnings

	* color.c: typo

	* tack.h:
	integration with ncurses: reordered headers, provide fallback definitions
	for the stuff we get from ncurses_cfg.h, make some stuff const.

	* Makefile.in: use HAVE_SELECT from configure-script

	* color.c:
	integration with ncurses: move most headers into tack.h, fix gcc warnings

	* Makefile.in: we'll have a config.h (actually ncurses_cfg.h)

	* modules: set base-subset

1997-12-24  Daniel.Weaver

	* HISTORY: ncurses-4.1-971220

1997-12-22  Daniel.Weaver

	* ansi.c, tack.1: ncurses-4.1-971220

1997-12-02  Daniel.Weaver

	* tack.c, init.c: ncurses-4.1-971220

1997-11-30  Daniel.Weaver

	* edit.c: ncurses-4.1-971220

1997-11-29  Daniel.Weaver

	* charset.c, pad.c: ncurses-4.1-971220

1997-11-07  Daniel.Weaver

	* sync.c, fun.c, crum.c, modes.c, control.c, sysdep.c, output.c, tack.h:
	ncurses-4.1-971220

1997-11-04  Daniel.Weaver

	* Makefile.in, menu.c: ncurses-4.1-971220

1997-11-03  Daniel.Weaver

	* scan.c, color.c, modules: ncurses-4.1-971220

1997-10-29  Daniel.Weaver

	* control.c, fun.c: ncurses-4.1-971101

1997-10-26  Daniel.Weaver

	* makefile, edit.c, tack.h, sync.c: ncurses-4.1-971101

1997-10-25  Daniel.Weaver

	* pad.c, tack.1: ncurses-4.1-971101

1997-10-19  Daniel.Weaver

	* tack.c, sysdep.c, scan.c, output.c, modes.c, menu.c, init.c, crum.c, color.c, charset.c, ansi.c, HISTORY:
	ncurses-4.1-971101

1997-10-06  Daniel.Weaver

	* makefile, tac.h, tack.c: ncurses-4.1-971011

1997-10-04  Daniel.Weaver

	* control.c, fun.c, sync.c, init.c, pad.c, modes.c, sysdep.c:
	ncurses-4.1-971011

1997-10-03  Daniel.Weaver

	* charset.c, output.c, edit.c, crum.c: ncurses-4.1-971011

1997-10-02  Daniel.Weaver
